testsuite/tests/driver/T2499.stderr

T2499.hs:1:13: error:
    unknown flag in  {-# OPTIONS_GHC #-} pragma: -package

T2499.hs:1:22: error:
    unknown flag in  {-# OPTIONS_GHC #-} pragma: blargh
